@@ -186,6 +186,22 @@ name|LuceneTestCase
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
+name|automaton
+operator|.
+name|LevenshteinAutomata
+import|;
+end_import
+
 begin_comment
 comment|/**  * Tests {@link FuzzyQuery}.  *  */
 end_comment
@@ -3330,6 +3346,261 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+block|}
+DECL|method|testValidation
+specifier|public
+name|void
+name|testValidation
+parameter_list|()
+block|{
+try|try
+block|{
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected error for illegal max edits value"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"maxEdits"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|,
+name|LevenshteinAutomata
+operator|.
+name|MAXIMUM_SUPPORTED_DISTANCE
+operator|+
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected error for illegal max edits value"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"maxEdits must be between"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+literal|1
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected error for illegal prefix length value"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"prefixLength cannot be negative"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected error for illegal max expansions value"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"maxExpansions must be positive"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+try|try
+block|{
+operator|new
+name|FuzzyQuery
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"foo"
+argument_list|)
+argument_list|,
+literal|1
+argument_list|,
+literal|0
+argument_list|,
+operator|-
+literal|1
+argument_list|,
+literal|false
+argument_list|)
+expr_stmt|;
+name|fail
+argument_list|(
+literal|"Expected error for illegal max expansions value"
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|IllegalArgumentException
+name|e
+parameter_list|)
+block|{
+name|assertTrue
+argument_list|(
+name|e
+operator|.
+name|getMessage
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"maxExpansions must be positive"
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|addDoc
 specifier|private
